--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <link rel="stylesheet" href="/css/styles.css">
     <script type="module" src="/main.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   </body>
